feat: Implement sort and search
